ADD:ユーザーの削除機能を追加